@@ -33,10 +33,11 @@
 #include "gimv_thumb_view.h"
 
 #define GIMV_TYPE_DUPL_WIN            (gimv_dupl_win_get_type ())
-#define GIMV_DUPL_WIN(obj)            (GTK_CHECK_CAST (obj, gimv_dupl_win_get_type (), GimvDuplWin))
-#define GIMV_DUPL_WIN_CLASS(klass)    (GTK_CHECK_CLASS_CAST (klass, gimv_dupl_win_get_type, GimvDuplWinClass))
-#define GIMV_IS_DUPL_WIN(obj)         (GTK_CHECK_TYPE (obj, gimv_dupl_win_get_type ()))
-#define GIMV_IS_DUPL_WIN_CLASS(klass) (GTK_CHECK_CLASS_TYPE ((klass), GIMV_TYPE_DUPL_WIN))
+#define GIMV_DUPL_WIN(obj)            (G_TYPE_CHECK_INSTANCE_CAST ((obj), GIMV_TYPE_DUPL_WIN, GimvDuplWin))
+#define GIMV_DUPL_WIN_CLASS(klass)    (G_TYPE_CHECK_CLASS_CAST ((klass), GIMV_TYPE_DUPL_WIN, GimvDuplWinClass))
+#define GIMV_IS_DUPL_WIN(obj)         (G_TYPE_CHECK_INSTANCE_TYPE ((obj), GIMV_TYPE_DUPL_WIN))
+#define GIMV_IS_DUPL_WIN_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE ((klass), GIMV_TYPE_DUPL_WIN))
+#define GIMV_DUPL_WIN_GET_CLASS(obj)  (G_TYPE_INSTANCE_GET_CLASS((obj), GIMV_TYPE_DUPL_WIN, GimvDuplWinClass))
 
 typedef struct GimvDuplWin_Tag      GimvDuplWin;
 typedef struct GimvDuplWinClass_Tag GimvDuplWinClass;
