@@ -1,5 +1,14 @@
 2007-10-16 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/gimv_elist.h, src/gimv_cell_pixmap.c, src/gimv_cell_pixmap.h,
+	  src/gimv_nav_win.h, src/gimv_image_view.h, src/gimv_image_win.h,
+	  src/gimv_dlist.c, src/gimv_dlist.h, src/gimv_scrolled.c,
+	  src/gimv_zlist.h, src/gimv_scrolled.h, src/gimv_dupl_win.h,
+	  src/gimv_zalbum.h, src/gimv_thumb_win.h:
+	GTK_CHECK_* -> G_TYPE_CHECK_*
+
+2007-10-16 Takuro Ashie <ashie@homa.ne.jp>
+
 	* plugins/image_view/gimv_mplayer.h, plugins/image_view/gimv_xine.c,
 	  plugins/image_view/gimv_xine.h, plugins/image_view/gimv_mplayer.c,
 	  src/gimv_thumb_view.h, src/gimv_elist.c, src/gimv_elist.h,
